fixed horizontal scroll issue with request page

--- a/css/request.css
+++ b/css/request.css
@@ -11,8 +11,7 @@ h1 {
 
 form {
     margin: 10px;
-    width: 100%;
-    display: inline-block;
+    display: block;
 }
 
 select, input, textarea {
